# splats4D

./: .gitignore  LICENSE  README.md  prompt.txt
.claude/: launch.json
.github/workflows/: wheels.yml
converter/: Cargo.toml  README.md  pyproject.toml
converter/src/: decode.rs  encode.rs  main.rs  model.rs  streams.rs
docs/: BENCHMARKS.md  FORMAT.md  benchmarks.json  index.html
docs/demo/: demo.json  index.html
docs/demo/assets/: index-BCQQ9_uS.js  index-BFv7Nfyu.js  index-BuyVVFz1.js  index-CHlvWrKV.js  index-CiZB1898.js  index-DQCeWRiD.js  index-DpHl1YWV.js  index-aas6TcrO.js  index-ccjQRnpI.js  worker-B8lDZJUf.js  worker-Cdod485B.js  worker-DaxXKHdp.js  worker-UsygThWO.js  worker-jCMYeJkY.js
tools/: analyze_npz.py  benchmark_all.py  color_diag.py  experiments.py  gen_splat_frames.py  make_webgpu_port.py  offset_test.py  prototype_codec.py  serve_throttled.mjs  splatv_to_frames.py
viewer/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
viewer/public/: compare.html  compare4d.html
viewer/public/webgl/: main.js
viewer/public/webgpu/: index.html  main.js
viewer/src/: camera.ts  format.ts  main.ts  origloader.ts  renderer.ts  renderer_gl.ts  rtypes.ts  splatmesh.ts  worker.ts
