[package]
name = "splat4d"
version = "0.1.0"
edition = "2021"
description = "Error-bounded temporal compressor: series of .splat gaussian-splat frames -> one streamable .splat4d"
license = "MIT"
repository = "https://github.com/adamraudonis/splats4D"
homepage = "https://adamraudonis.github.io/splats4D/"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", features = ["zstdmt"] }

[profile.release]
lto = "thin"
codegen-units = 1
